Promijenjena verzija Blazora na 0.3

--- a/TimeTracker/TimeTracker.Client/Pages/ActivityList.cshtml
+++ b/TimeTracker/TimeTracker.Client/Pages/ActivityList.cshtml
@@ -27,5 +27,6 @@
 
 @functions
 {
-    public IList<Activity> Activities { get; set; }
+    [Parameter]
+    private IList<Activity> Activities { get; set; }
 }
