--- a/TimeTracker/TimeTracker.Client/Pages/Login.cshtml
+++ b/TimeTracker/TimeTracker.Client/Pages/Login.cshtml
@@ -67,7 +67,8 @@
             </div>
 
 @functions {
-    public AppState appState { get; set; }
+    [Parameter]
+    private AppState appState { get; set; }
     private string Username;
     private string Password;
     private string Message;
