--- a/TimeTracker/TimeTracker.Client/Shared/NavMenu.cshtml
+++ b/TimeTracker/TimeTracker.Client/Shared/NavMenu.cshtml
@@ -42,7 +42,8 @@
     </nav>
 
 @functions {
-    public AppState state { get; set; }
+    [Parameter]
+    private AppState state { get; set; }
     private void Logout()
     {
         state.Logout();
