--- a/TimeTracker/TimeTracker.Client/Shared/MainLayout.cshtml
+++ b/TimeTracker/TimeTracker.Client/Shared/MainLayout.cshtml
@@ -1,9 +1,5 @@
-﻿@implements ILayoutComponent
+﻿@inherits BlazorLayoutComponent
 
 <div class="container-fluid">
     @Body
 </div>
-
-@functions {
-    public RenderFragment Body { get; set; }
-}
