--- a/TimeTracker/TimeTracker.Client/Pages/ProjectDetails.cshtml
+++ b/TimeTracker/TimeTracker.Client/Pages/ProjectDetails.cshtml
@@ -13,17 +13,18 @@ else
             <h1 class="display-4">@Project.Name</h1>
             <p class="lead">@Project.Description</p>
             <hr class="my-4"/>
-            <AddActivity Project=Project.Id SaveActivity=SaveActivity/>
+            <AddActivity Project=Project.Id SaveActivity=SaveActivity Activities=ActivitiesMap/>
             <hr class="my-4"/>
-            <ActivityList Activities=Project.Activities/>
+            <ActivityList Activities=Project.Activities ActivitiesMap=ActivitiesMap Project=Project.Id notifyParent=StateHasChanged/>
         </div>
     </div>
 }
 
 @functions
 {
+    private Dictionary<Guid, ActivityModel> ActivitiesMap = new Dictionary<Guid, ActivityModel>();
     [Parameter]
     private Project Project { get; set; }
     [Parameter]
-    private Func<CreateActivityModel, Task> SaveActivity { get; set; }
+    private Func<ActivityModel, Task> SaveActivity { get; set; }
 }
