--- a/TimeTracker/TimeTracker.Client/Pages/AddActivityManual.cshtml
+++ b/TimeTracker/TimeTracker.Client/Pages/AddActivityManual.cshtml
@@ -1,13 +1,17 @@
 ﻿@using TimeTracker.Shared.Model
-<br />
-<input class="form-control" placeholder="Description" type="text" bind="@Activity.Description" /><br />
-<input class="form-control" placeholder="Label" type="text" bind="@Activity.Label" /><br />
 <div class="container">
     <div class="row">
-        <div class="col-md-2">
+        <div class="col">
+            <input class="form-control" placeholder="Description" type="text" bind="@Activity.Description" />
+            <input class="form-control" placeholder="Label" type="text" bind="@Activity.Label" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
             <label for="hours">Hours:</label><input class="form-control" placeholder="Description" type="number" bind="Hours" />
         </div>
-        <div class="col-md-2">
+        <div class="col">
             <label for="minutes">Minutes:</label><input class="form-control" placeholder="Description" type="number" bind="Minutes" />
         </div>
     </div>
